# cognitive-passphrases-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  USER_MANUAL.md  generate_passphrase.cmd  generate_passphrase.ps1  generate_passphrase.py  generate_passphrase_windows.cmd  marked-syntax.json  mkdocs.yml  passphrases.xlsm  paths.env.bak  pyproject.toml  sources.json  test_generate_passphrase.py  todo  validate-generation.todo  validate_generation.py
.githooks/: post-checkout  sync_version.py
.github/workflows/: ci.yml
catalog/common/: separators.json  terminal-punctuations.json
catalog/common/delimiters/: action-location.json  action-subject.json  action-timestamp.json  location-action.json  location-subject.json  location-timestamp.json  subject-action.json  subject-location.json  subject-subject.json  subject-timestamp.json  timestamp-action.json  timestamp-location.json  timestamp-subject.json
catalog/common/prefixes/subjects/: titles.json
catalog/common/timestamps/: future.json  past.json  present.json
catalog/common/vocabulary/: grammar.json  phrase_modifiers.json  sentence_templates.json  separators.json
catalog/common/vocabulary/conjunctions/coordinatives/: en-us.json
catalog/common/vocabulary/conjunctions/correlatives/: en-us.json
catalog/common/vocabulary/conjunctions/subordinatives/: en-us.json
catalog/movies/locations/: en-us.json
catalog/movies/peoples/: actors.json
catalog/movies/peoples/characters/: en-us.json
catalog/movies/peoples/heroes/: en-us.json
catalog/movies/taglines/: en-us.json
catalog/movies/titles/: en-us.json
catalog/movies/titles-as/: timestamps.json  verbs.json
catalog/xspace/: movies.action-titles.json  movies.heroes.json  movies.titles.json
docs/: USER_MANUAL.md  changelog.md  index.md
profiles/: __init__.py  ai_sentence.json  cognitive-passphrases-generator.json  movies.yaml  profiles.json  profiles.yaml  sources.json  sources.yaml  validation.py  xspace.yaml
