[project]
name = "cognitive-passphrases-generator"
version = "0.9.2"
description = "Cognitive Passphrases Generator using profiles and JSON catalogs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "hypothesis>=6.0.0",
  "bandit>=1.7.0",
]

[project.scripts]
generate-passphrase = "generate_passphrase:main"
release = "release:main"

[tool.poetry]
packages = [{include = "generate_passphrase.py"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501"]  # Line too long, handled by formatter
extend-ignore = ["C901", "PLR0911", "PLR0912", "PLR0915", "S105"]
per-file-ignores = { "test_*.py" = ["S101", "I001"], "generate_passphrase.py" = ["T201", "FURB105"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=generate_passphrase --cov-report=term-missing"
testpaths = ["test_generate_passphrase.py"]

[tool.bandit]
exclude_dirs = ["test_*", "__pycache__"]
skips = ["B101", "B601"]  # Assert used, shell usage allowed for scripts